<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Corona</string>
    <string name="app_title">infection status online</string>

    <string name="login_window_message">Login to your account</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_invalid_credentials">Invalid username and/or password</string>

    <string name="register_window_message">Don\'t have an account? Register one!</string>
    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email address</string>
    <string name="register_register">Register</string>
<!--<string name="register_invalid_credentials">Username and/or email and/or password does/do not meet requirements</string>-->
    <string name="register_invalid_username">Username must be 3-20 characters long and can contain any uppercase/lowercase letters (a-z, A-Z) and numbers (0-9)</string>
    <string name="register_invalid_email">Email must be 10-50 characters long and can contain some special characters (@.-_)</string>
    <string name="register_invalid_password">Password must be 5–20 characters long and can contain some special characters (@.!_)</string>
    <string name="search_loading_data">Please wait for Covid data to be displayed</string>
    <string name="search_error_reading_data">Could not read data from API. For more information:</string>
    <string name="search_no_results">No results</string>

</resources>